# CrumbBum

./: .gitignore  LICENSE  Makefile  README.md  handInJar.py  pyproject.toml
src/crumbbum/: cdp.py  cli.py
tests/: conftest.py  test_cdp.py  test_cli.py
